@@ -1,6 +1,7 @@
 Revision history for perl distribution SVG-Barcode
 
 0.11 Not Released
+ - Add scale parameter
  - Improve docs
 
 0.10 2019-05-26T06:17:16+0200
